    fit$coef to fit$coefficients. (MichaelChirico)
    \item Fix error in concordance for a coxph model with (time1, time2)
    data and timewt='S'.  Add new test to tests/concordance3.R. Error
    pointed out by Shaunson26.
    \item Begin movement of many vignettes to the survivalVignettes
    package. See the "other vignettes" vignette stub for more
    information.
}}
\section{Changes in version 3.6.4}{
  \itemize{
    \item Oversight in final CRAN submission, change version number and
    resubmit
}}
\section{Changes in version 3.6.3}{
  \itemize{
    \item Fix small bug in residuals.survfit wrt labeling rows of the
    output.  Update helpfile to describe the dimnames.
    \item Submit to CRAN
}}
\section{Changes in version 3.6-2}{
  \itemize{
    \item Change survfitaj.c to avert a spurious compiler warning which
    made the CRAN input unhappy
}}
\section{Changes in version 3.6-1}{
  \itemize{
    \item Major update to survfit routines. Infinitesimal jackknife (IJ)
    residuals are now primarily computed using the residuals() function
    post fit, de-emphasizing return of an influence component from the
    fit, with significant work to make the residuals function
    computationally  efficient. New tests for many edge cases.
    \item Addition of a "methods" vignette to more fully document
    formulas and code, begining a move away from noweb documentation.
    \item Add test case for the 'extended KM', one where subjects change
    arms in mid-stream.  (I'm not a fan, but some advocate it.)  This
    uncovered some inconsistencies in the n.risk and n.censor values;
    the survival estimates themselves were correct.  For a subject with data
    of (1, 5+), (5, 7), say, there is no "censor" at time 5; the prior code
    sometimes emited an unneeded output line for such rows.
    \item Add n.id to the survfit object= number of unique id values
    used in creating a curve; available when the survfit call contains